non_executable_reasons_record_from_random_10k/321.txt
3.5
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%HTML
<button onclick="$('.input, .prompt, .output_stderr, .output_error, .output_result').toggle();">Toggle Code</button>
------------------

[0;36m  File [0;32m"<ipython-input-1-97d5117522e4>"[0;36m, line [0;32m3[0m
[0;31m    %%HTML[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-97d5117522e4>, line 3)

Executability                            : False
